# VoxType

./: .env.example  .gitignore  CLAUDE.md  README.md  README_zh.md  convert_to_gguf.py  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-release.yml  build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: asr.rs  lib.rs  main.rs
src/components/: MicRecorder.tsx
