[package]
name = "voxtype"
version = "0.1.0"
description = "语音输入应用，使用 Whisper ASR"
authors = ["Jayson Albert"]
edition = "2021"

[lib]
name = "voxtype_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.16.0", features = ["log_backend"] }
hound = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
